--- a/script/knowledge_base_update.ipynb
+++ b/script/knowledge_base_update.ipynb
@@ -5,7 +5,7 @@
    "id": "cd92ccf9-a4e9-4cda-9b3c-f7e21e24e1dc",
    "metadata": {},
    "source": [
-    "You can make web requests to invoke Flask-based HTTP functions as needed to load more cleaning more data"
+    "This notebook allows you to manage web requests that invoke Flask-based HTTP functions as needed to load additional cleaned data into the knowledge base, and subsequently update the materialized view used for popularity score calculation."
    ]
   },
   {
@@ -65,19 +65,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e1eb0a93-c5a0-4515-bc79-43624e3c77be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[200] http://127.0.0.1:8181/etl?start_row_index=300101&end_row_index=300130&source=training → ...\n",
+      "[200] http://127.0.0.1:8181/etl?start_row_index=300191&end_row_index=300200&source=training → ...\n",
+      "[200] http://127.0.0.1:8181/etl?start_row_index=300131&end_row_index=300160&source=training → ...\n",
+      "[200] http://127.0.0.1:8181/etl?start_row_index=300161&end_row_index=300190&source=training → ...\n"
+     ]
+    }
+   ],
    "source": [
     "# Example usage of dispatch_etl_requests\n",
     "\n",
-    "# This will dispatch ETL requests for rows 500 to 600 (inclusive),\n",
-    "# using the 'training' source, in batches of 10 rows each.\n",
-    "# Up to 5 requests will be processed concurrently.\n",
+    "# This will dispatch ETL requests for rows 300101 to 300200 (inclusive),\n",
+    "# using the 'training' source, in batches of 30 rows each.\n",
+    "# Up to 16 requests will be processed concurrently.\n",
     "# The requests will be sent to the specified ETL endpoint.\n",
     "\n",
-    "# dispatch_etl_requests(500, 600, \"training\", batch_size=10, max_workers=5)"
+    "dispatch_etl_requests(300101, 300200, \"training\", batch_size=30, max_workers=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "34d61cc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/krabssiew/Desktop/MDS/Block 6/capstone/heymate-report/script/util_database_reader.py:59: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 30200 rows from SQL Server.\n",
+      "Table cleaned_menu_with_popularity is ready.\n",
+      "Truncating table cleaned_menu_with_popularity...\n",
+      "Uploaded 24407 rows to cleaned_menu_with_popularity\n"
+     ]
+    }
+   ],
+   "source": [
+    "# After all new data is loaded, update the materialized view for the popularity score.\n",
+    "from popularity_score_calculator import calculate_and_upload\n",
+    "calculate_and_upload(truncate=True)"
    ]
   }
  ],
