--- a/script/visualization_demo.ipynb
+++ b/script/visualization_demo.ipynb
@@ -5,10 +5,14 @@
    "id": "68a541fe-d34f-4930-8d5e-bf9fc38c4b00",
    "metadata": {},
    "source": [
-    "Visualization utilities for menu item recommendations and popularity scores.\n",
+    "## Visualization Utilities for Menu Item Recommendations and Popularity Scores\n",
     "\n",
-    "This module provides functions for plotting interactive bar charts to visualize the popularity of recommended menu items using Altair.\n",
-    "It includes tools for formatting, color-coding, and exporting visualizations to HTML"
+    "This notebook provides utility functions for visualizing menu item popularity and recommendation outputs using **Altair**.\n",
+    "\n",
+    "### What this notebook does:\n",
+    "- Generates **interactive bar charts** to display popularity scores for recommended menu items.\n",
+    "- Applies consistent **formatting** and **color-coding** to improve readability.\n",
+    "- Supports **exporting visualizations to HTML** for sharing or integration into reports and dashboards."
    ]
   },
   {
@@ -158,7 +162,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/krabssiew/Desktop/MDS/Block 6/capstone/heymate-report/script/sql_reader.py:54: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/Users/krabssiew/Desktop/MDS/Block 6/capstone/heymate-report/script/util_database_reader.py:59: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, conn)\n"
      ]
     },
@@ -166,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read 24223 rows from SQL Server.\n"
+      "Read 24407 rows from SQL Server.\n"
      ]
     },
     {
@@ -174,23 +178,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-5c6604b6b8e44d61979c995bfa896e7c.vega-embed {\n",
+       "  #altair-viz-203d2334b4bf4e3faf8ebb04a5747873.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-5c6604b6b8e44d61979c995bfa896e7c.vega-embed details,\n",
-       "  #altair-viz-5c6604b6b8e44d61979c995bfa896e7c.vega-embed details summary {\n",
+       "  #altair-viz-203d2334b4bf4e3faf8ebb04a5747873.vega-embed details,\n",
+       "  #altair-viz-203d2334b4bf4e3faf8ebb04a5747873.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-5c6604b6b8e44d61979c995bfa896e7c\"></div>\n",
+       "<div id=\"altair-viz-203d2334b4bf4e3faf8ebb04a5747873\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-5c6604b6b8e44d61979c995bfa896e7c\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-5c6604b6b8e44d61979c995bfa896e7c\");\n",
+       "    if (outputDiv.id !== \"altair-viz-203d2334b4bf4e3faf8ebb04a5747873\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-203d2334b4bf4e3faf8ebb04a5747873\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
