--- a/final_report/final-report.tex
+++ b/final_report/final-report.tex
@@ -179,7 +179,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Menu Engineering Supercharged},
-  pdfauthor={Hankun Xiao, Yasmin Hassan, Jiaxin Zhang, Zhiwei Zhang},
+  pdfauthor={Hankun Xiao, Yasmin Hassan, Jessie Zhang, Zhiwei Zhang},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -196,7 +196,7 @@
 }
 \makeatother
 \subtitle{MDS Capstone Final Report}
-\author{Hankun Xiao, Yasmin Hassan, Jiaxin Zhang, Zhiwei Zhang}
+\author{Hankun Xiao, Yasmin Hassan, Jessie Zhang, Zhiwei Zhang}
 \date{}
 
 \begin{document}
@@ -211,50 +211,56 @@
 
 \section{Executive Summary}\label{executive-summary}
 
-This project helps restaurant owners make data-informed menu decisions
-by turning raw menu text into structured insights. We applied language
-models and scoring techniques to identify popular items and generate
-actionable recommendations. The solution is scalable and designed for
-real-world application.
+This project supports our partner, Heymate, in delivering data-driven
+menu insights to their restaurant clients. Leveraging over 3 million
+popularity records and the power of large language models, we developed
+a structured data cleaning pipeline and generated a weighted scoring
+mechanisma to identify top-performing dishes. The final product includes
+a scalable recommendation system that suggests the most popular menu
+items based on restaurant type, enabling merchants to optimize their
+offerings with minimal technical effort.
 
 \section{Introduction}\label{introduction}
 
-Restaurant owners constantly face the challenge of designing menus that
-align with customer preferences and evolving market trends. However,
-without access to broader market data, these decisions are often based
-on intuition or limited local feedback. This project aims to bridge that
-gap by transforming publicly available menu data into structured
-insights that can support data-informed menu design.
+Our capstone partner, Heymate, provides an all-in-one business
+management system, with the majority of its clients being restaurants.
+However, these restaurant owners constantly face the challenge of
+designing menus that align with customer preferences and evolving market
+trends due to the lack of access to broader market data. Our project
+aims to bridge that gap by transforming publicly available menu data
+into structured insights that can support data-informed menu design,
+enabling the partner to offer greater value to their clients through
+market-driven recommendations.
 
-Our capstone partner heymate! provides an all-in-one business management
-system, with the majority of its clients being restaurants. By
-structuring and analyzing large-scale menu data, our project enables the
-partner to offer greater value to their clients through market-informed
-recommendations and operational insights.
+Our initial resource was internal database provided by Heymate, which
+contained thousands of raw menu records from their clients. However, the
+internal data alone was insufficient to support robust recommendation
+modeling due to limited scale of menu and trending information. To
+address this, we explored various open-source datasets, and found a menu
+dataset containing millions of menu records along with associated
+popularity metrics on Uber Eats (Sakib (2023)), making it a great data
+source in terms of scale, quality, and coverage.
 
-Our initial exploration focused on collecting internal datasets provided
-by the capstone partner, which contained thousands of raw menu records
-from their various clients, covering a range of restaurant types.
-However, the internal data alone was insufficient to support robust
-recommendation modeling due to its limited scale. To address this, we
-researched open-source datasets, such as UberEats menus, which included
-richer item descriptions, categories, and ratings (Sakib (2023)). These
-datasets helped us understand the variation in menu language, portioning
-terms, and restaurant classification.
+However, messy data, large-scale datasets, and customized menu item
+names posed significant challenges to the construction of our
+recommendation system. Therefore, our scientific objective was to design
+an end-to-end pipeline that leverages diverse data science techniques to
+build a robust and scalable recommendation system, powered by a
+popularity-based knowledge base and capable of handling multi-type
+inputs.
 
-The main objective of our project was to design a structured pipeline
-that can standardize menu data and generate a scoring mechanism to
-support recommendation use cases. We built a LLM-based classification
-module to extract dish base, flavor, combo status, and standardized
-restaurant types, using carefully designed prompts. These structured
-outputs were then scored using a popularity metric and visualized for
-actionable insights.
+\newpage
 
-\section{Data Pipeline Overview}\label{data-pipeline-overview}
+\section{Data Pipeline Framework}\label{data-pipeline-framework}
+
+Based on the project objective, we developed the following modular data
+pipeline framework: (Figure~\ref{fig-data-pipeline-overview})
 
 \begin{figure}
 
-\caption{\label{fig-data-pipeline-overview}Data Pipeline Overview}
+\caption{\label{fig-data-pipeline-overview}Data Pipeline Framework - The
+core recommender supported by two pipelines: one for modeling from
+market data, and another for generating recommendations based on input}
 
 \centering{
 
@@ -264,46 +270,38 @@ actionable insights.
 
 \end{figure}%
 
-The core workflow follows a modular pipeline that integrates data
-processing, knowledge base construction, and recommendation generation.
-
-\newpage
-
 \subsection{Model Input Pipeline (Horizontal
-Flow)}\label{model-input-pipeline-horizontal-flow}
+Workflow)}\label{model-input-pipeline-horizontal-workflow}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  Data Ingestion: We start by collecting raw menu data from both
-  internal and external sources, covering a wide range of cuisines, item
-  types, and descriptions. For this project, we focus on the Uber Eats
-  dataset due to its large volume of menu items and availability of
-  popularity metrics.
+  Data Ingestion: After researching across multiple open-source
+  datasets, we found a Uber Eats dataset from Kaggle covers a wide range
+  of restaurant types, menu items, and their corresponding descriptions.
 \item
-  Feature Engineering: Under suggestion and domain knowledge from the
-  project partner, we identify and select the most informative features
-  from the raw data. The goal is to retain fields that influence
-  customer decisions and remove those that add noise or redundancy.
+  Feature Engineering: As the raw dataset was quite messy, it needed to
+  undergo a series of preprocessing and standardization process so that
+  we can use them for further popularity score calculation.
 \item
-  Knowledge Base Construction: We build a knowledge base by scoring each
-  menu item's popularity using appearance frequency, rating counts, and
-  scores. This serves as the foundation for capturing market trends and
-  powering recommendations.
+  Knowledge Base Construction: Under suggestion and domain knowledge
+  from the project partner,we buily a weighted scoring knowledge base on
+  various popularity metrics. This serves as the foundation for
+  capturing market trends and powering recommendations.
 \end{enumerate}
 
 \subsection{Testing and Production Pipeline (Vertical
-Flow)}\label{testing-and-production-pipeline-vertical-flow}
+Workflow)}\label{testing-and-production-pipeline-vertical-workflow}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  User Input: The recommender system processes JSON inputs from two
-  sources: sampled internal data from the development environment for
-  evaluation and tuning, and live user inputs from the production
-  environment via the web portal for real-time recommendations.
+  Recommender Input: The recommender system can process JSON inputs from
+  two sources, including client restaurant type from Heymate internal
+  database, and user input of restaurant types via the web portal for
+  real-time recommendations.
 \item
   Recommendation Module: Based on the specified restaurant type, the
   engine searches the knowledge base, ranks menu items using scoring
@@ -317,10 +315,10 @@ Flow)}\label{testing-and-production-pipeline-vertical-flow}
 \section{Transition from Framework to Data
 Product}\label{transition-from-framework-to-data-product}
 
-Having established our framework in earlier stages, we shifted our focus
-to building a scalable data product. At its core is a recommendation
-engine that suggests top-performing dishes by leveraging aggregated
-popularity patterns from similar restaurant types.
+Having established our framework, we shifted our focus to building a
+scalable data product. At its core is a recommendation engine that
+suggests top-performing dishes by leveraging aggregated popularity
+patterns from similar restaurant types.
 
 \subsection{Data Wrangling Module}\label{data-wrangling-module}
 
@@ -329,22 +327,21 @@ Analysis}\label{exploratory-data-analysis}
 
 To support the development of a robust recommendation engine, we first
 conducted exploratory data analysis (EDA) to assess data quality and
-structure. The insights informed a series of targeted wrangling tasks
-aimed at producing a clean, consistent, and high-quality model input
-dataset.
+structure. The insights suggest the need to perform wrangling tasks for
+a clean, consistent, and high-quality model input dataset.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  \textbf{Data Quality and Inconsistencies:} Both the Uber eats and
-  internal datasets presented significant quality issues (shown in
-  Table~\ref{tbl-null-entries} and Figure~\ref{fig-null-internal}),
-  including missing values, formatting inconsistencies and test records,
-  posing a major challenge for generating reliable type-based
-  recommendations. To address these, we implemented preprocessing logic
-  that performs null handling, duplicate removal, and validation of key
-  fields before further processing.
+  \textbf{Data Quality and Inconsistencies:} The raw Uber Eats data
+  contains more than 5 million menu records, but it presented
+  significant quality issues (shown in Table~\ref{tbl-null-entries}),
+  including missing critical metrics, formatting inconsistencies, posing
+  a major challenge in popularity score calculation. Therefore, we
+  implemented preprocessing logic to remove all these incomplete,
+  duplicated, or other invalid menu records, which results in around 3.2
+  million records for next step.
 \end{enumerate}
 
 \begin{longtable}[]{@{}lr@{}}
@@ -372,30 +369,33 @@ menu\_item\_description & 1452305 \\
 price & 160 \\
 \end{longtable}
 
-\begin{figure}
-
-\caption{\label{fig-null-internal}Null Entries in internal dataset
-(Model Testing Data)}
-
-\centering{
-
-\includegraphics[width=0.6\textwidth,height=\textheight]{../image/final_2_null_internal.png}
-
-}
-
-\end{figure}%
-
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \setcounter{enumi}{1}
 \tightlist
 \item
   \textbf{Large-Scale Data Processing:} Even after preprocessing, the
-  dataset contained over \textbf{3 million} records, making full
+  dataset still contained over \textbf{3 million} records, making full
   in-memory processing impractical due to runtime and memory
   constraints. To ensure scalability, we implemented batch processing by
   retrieving indexed chunks and deployed it via a Flask framework with
   multithreaded API calls for concurrent execution.
+\end{enumerate}
+
+\newpage
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{2}
+\tightlist
+\item
+  \textbf{Menu Naming Variability:} The biggest challenge was the
+  inconsistent naming of similar dishes, for example, ``seafood fried
+  rice'' appeared in various forms and languages
+  (Figure~\ref{fig-seafood-fried-rice-var}). This hindered similarity
+  comparisons and recommendation accuracy. To address this, we used
+  OpenAI's GPT API for semantic standardization, enhancing consistency
+  and model performance.
 \end{enumerate}
 
 \begin{figure}
@@ -411,39 +411,11 @@ Variation}
 
 \end{figure}%
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\setcounter{enumi}{2}
-\tightlist
-\item
-  \textbf{Menu Description Variability:} The biggest challenge was the
-  inconsistent naming of similar dishes, for example, ``seafood fried
-  rice'' appeared in various forms and languages
-  (Figure~\ref{fig-seafood-fried-rice-var}). This hindered similarity
-  comparisons and recommendation accuracy. To address this, we used
-  OpenAI's GPT API for semantic standardization, enhancing consistency
-  and model performance.
-\end{enumerate}
-
 \subsubsection{Solution Pipeline}\label{solution-pipeline}
 
 All wrangling tasks were encapsulated in modular Python scripts and
-integrated into a unified data pipeline. This pipeline:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  Cleans and preprocesses both internal and Uber eats datasets
-\item
-  Applies GPT-based semantic normalization to menu fields
-\item
-  Feeds standardized data into the recommendation engine
-\end{enumerate}
-
-For the model input dataset Figure~\ref{fig-training-pipline}, the
-processed data is enriched with popularity metrics and serves as the
-engine's core knowledge base.
+integrated into a unified data pipeline
+(Figure~\ref{fig-training-pipline}). This pipeline includes:
 
 \begin{figure}
 
@@ -457,11 +429,47 @@ engine's core knowledge base.
 
 \end{figure}%
 
-For the model testing dataset Figure~\ref{fig-testing-pipline}, the same
-logic is applied to ensure full consistency. The input can be either the
-cleaned internal restaurant type or the user-selected restaurant type,
-both of which are passed through the recommender system to generate
-top-rated dish recommendations.
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Data Cleaning: Due to inconsistencies in the raw menu data from Uber
+  Eats, we implemented preprocessing procedures. Since dishes were named
+  differently across restaurants, we developed a semantic
+  standardization pipeline powered by the GPT API to normalize dish
+  names and group similar items under unified labels.
+\item
+  Cleaning Deployment: This standardization process was deployed using a
+  Flask-based batch-processing mechanism to enable concurrent
+  processing. The Heymate engineering team will explore Azure as a
+  potential option for faster and automated deployment. Each batch of
+  raw data was processed and uploaded to generate a cleaned dataset.
+\item
+  Scoring and Knowledge Base: Once the data was standardized, we joined
+  each menu item with key popularity metrics. This aggregated table will
+  be stored and used to calculate popularity scores, which will be
+  discussed in detail in a later section.
+\end{enumerate}
+
+For the model testing dataset (Figure~\ref{fig-testing-pipline}), the
+similar logic is applied here as Heymate's internal database also
+exbihits some extent of quality issues (shown in
+Figure~\ref{fig-null-internal}). The standardized input will pass
+through the recommender system to generate top-rated dish
+recommendations.
+
+\begin{figure}
+
+\caption{\label{fig-null-internal}Null Entries in internal dataset
+(Model Testing Data)}
+
+\centering{
+
+\includegraphics[width=0.6\textwidth,height=\textheight]{../image/final_2_null_internal.png}
+
+}
+
+\end{figure}%
 
 \begin{figure}
 
@@ -475,46 +483,50 @@ top-rated dish recommendations.
 
 \end{figure}%
 
-After reviewing the overall pipeline, we now take a closer look at the
-LLM-based cleaning component, which plays a key role in addressing
-semantic inconsistencies in menu descriptions and enhancing the quality
-of downstream recommendations.
-
 \subsection{Data Cleaning Module}\label{data-cleaning-module}
 
-To ensure that meaningful insights can be extracted from raw menu data,
-we first needed to address a major challenge: data inconsistency.
-
-Both the internal dataset provided by the partner and the Uber Eats
-dataset exhibit several common challenges, including:
+After reviewing the overall pipeline, we now take a closer look at the
+data cleaning component, which plays a key role in addressing
+inconsistencies in menu dish names and enhancing the quality of
+downstream recommendations. Specifically, we want to address following
+issues:
 
 \begin{itemize}
 \tightlist
 \item
   Mixed languages: Many item names contain both English and non-English
-  text.
+  text (Figure~\ref{fig-cleaning-challenge}).
 \item
-  Inconsistent restaurant types: Broad categories (e.g., ``American'')
-  are mixed with specific terms (e.g., ``wings'', ``sandwich''), making
+  Inconsistent restaurant types: Broad categories (e.g.~``American'')
+  are mixed with specific terms (e.g.~``wings'', ``sandwich''), making
   aggregation difficult.
 \item
-  Combo indicators: Expressions such as ``Combo,'' ``Set of Two,'' or
+  Combo indicators: Expressions such as ``Combo'', ``Set of Two'', or
   ``Family Meal'' are used inconsistently, complicating identification.
 \item
   Quantity terms: Words like ``6 Pc'' add additional noise and make
   parsing less accurate.
 \end{itemize}
 
-In addition, the Uber Eats dataset, while richer in features such as
-ratings, rating counts and descriptions, also suffers from missing
-values. These missing fields affect the quality of metadata, making it
-challenging to ensure consistency and completeness during the cleaning
-process.
+\begin{figure}
+
+\caption{\label{fig-cleaning-challenge}Cleaning Challenge Example}
+
+\centering{
+
+\includegraphics[width=0.3\textwidth,height=\textheight]{../image/final_9_cleaning_challenge.png}
+
+}
+
+\end{figure}%
 
 Without resolving these issues, it would have been impossible to run any
-structured analysis across restaurants at scale. To tackle this, we
-designed a Data Cleaning Module powered by the GPT API. We developed a
-prompt-engineering pipeline that includes two main parts:
+structured analysis across restaurants at scale. Since our project
+timeline are relatively tight, we decided to utilize GPT API as it can
+achieve semantic inference, format alignment, as well as language
+processing in a more efficient manner while maintaining relativeky great
+quality. Therefore, we developed a prompt-engineering pipeline that
+includes two main parts:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -529,15 +541,16 @@ prompt-engineering pipeline that includes two main parts:
   of dictionary format.
 \end{enumerate}
 
-The GPT model returns structured output for each menu item, including:
+The GPT model returns structured output for each menu item, including
+(Figure~\ref{fig-cleaned-example}):
 
 \begin{itemize}
 \tightlist
 \item
-  \texttt{dish\_base}: core identity (e.g., ``fried rice'').
+  \texttt{dish\_base}: core identity (e.g.~``fried rice'').
 \item
-  \texttt{dish\_flavor}: tags like cooking method or toppings (e.g.,
-  {[}``chicken''{]}).
+  \texttt{dish\_flavor}: tags like cooking method or toppings
+  (e.g.~{[}``chicken''{]}).
 \item
   \texttt{is\_combo}: boolean indicating if the item is a combo.
 \item
@@ -545,19 +558,31 @@ The GPT model returns structured output for each menu item, including:
   with Google Maps Food and Drinks category.
 \end{itemize}
 
+\begin{figure}
+
+\caption{\label{fig-cleaned-example}Cleaned Menu Iten Example}
+
+\centering{
+
+\includegraphics[width=0.7\textwidth,height=\textheight]{../image/final_10_cleaned_example.png}
+
+}
+
+\end{figure}%
+
 To ensure extraction quality and reliability, we iteratively refined our
 prompt engineering strategy:
 
 \begin{itemize}
 \tightlist
 \item
-  Required vs.~optional fields: We clearly specified which fields (e.g.,
-  item name) must be present, and which are optional (e.g., menu
+  Required vs.~optional fields: We clearly specified which fields
+  (e.g.~item name) must be present, and which are optional (e.g.~menu
   description). When optional fields were missing, the model was
   instructed to infer based on other inputs.
 \item
-  Typing rules: We enforced strict formatting in the output, including
-  lowercase, singular, American English spellings, to ensure
+  Formatting rules: We enforced strict formatting in the output,
+  including lowercase, singular, American English spellings, to ensure
   consistency.
 \item
   Controlled restaurant type output: We constrained the model to select
@@ -565,7 +590,7 @@ prompt engineering strategy:
   and Drinks categories.
 \item
   Combo identification: We embedded recognition logic for different
-  combo indicators, such as ``set of,'' ``combo,'' or ``family meal.''
+  combo indicators, such as ``set of'', ``combo'', or ``family meal''.
 \item
   Prompt length optimization: Through iterative testing, we shortened
   prompt size while maintaining output quality, helping reduce API
@@ -593,68 +618,60 @@ structured format suitable for downstream analysis and recommendation.
 
 \end{figure}%
 
-\subsubsection{Feature Engineering}\label{feature-engineering}
+\subsubsection{Feature Integration}\label{feature-integration}
 
-Once the LLM produces a cleaned menu dataset (cleaned\_menu\_mds), we
-proceed to feature engineering, enriching this data with relevant
-popularity metrics. At this stage, we:
+Once the LLM produces cleaned menu data (in table
+\texttt{cleaned\_menu\_mds}), we proceeded to feature integration,
+enriching this data with relevant popularity metrics. At this stage, we:
 
 \begin{itemize}
 \tightlist
 \item
-  Join the cleaned Uber Eats menu data with the original Uber Eats
-  metadata tables:
+  Joined the cleaned Uber Eats menu data (text data) with popularity
+  metrics in the original Uber Eats metadata table
+  \texttt{Restaurants\_mds}, which contains rating counts and rating
+  scores.
+\item
+  This step allowed us to bring back three key popularity indicators
+  that were temporarily removed during cleaning:
 
   \begin{itemize}
   \tightlist
   \item
-    \texttt{Menu\_mds\_sorted} (links dish rows to restaurant IDs)
+    Number of Ratings: how many users rated the dish
   \item
-    \texttt{Restaurants\_mds} (contains rating counts and scores)
+    Average Rating: the restaurant average rating score given by users
+  \item
+    Item Frequency: how often a dish appears, counting occurrences
+    grouped by dish base, dish flavor, and restaurant type\\
   \end{itemize}
 \item
-  This join reintroduces three key popularity indicators that had been
-  removed during cleaning:
-
-  \begin{itemize}
-  \tightlist
-  \item
-    Number of Ratings (ratings)
-  \item
-    Average Rating (score)
-  \item
-    Frequency, calculated using a \texttt{SQL\ COUNT\ (*)\ OVER\ (...)}
-    partition grouped by \texttt{dish\_base}, \texttt{dish\_flavor}, and
-    \texttt{restaurant\_type\_std} We also:
-  \end{itemize}
-\item
-  Remove entries where \texttt{is\_combo\ ==\ True} to avoid noise in
-  popularity estimates
-\item
-  Eliminate duplicates and ambiguous rows to maintain a clean, reliable
-  feature matrix
+  We also removed entries where \texttt{is\_combo\ ==\ True} to avoid
+  noise in popularity estimates.
 \end{itemize}
 
-The resulting dataset forms the core knowledge base, a structured,
-popularity-aware version of Uber Eats data, on which all recommendations
-are based.
+The resulting dataset forms the \textbf{core knowledge base}, a
+structured, popularity-aware version of Uber Eats data, on which all
+recommendations are based.
 
 \subsection{Normalize Matrix}\label{normalize-matrix}
 
-To ensure that the three indicators (rating counts, rating scores,
-frequency) are \textbf{comparable} and \textbf{balanced}, we apply
-\textbf{MinMaxScaler} to rescale them to the {[}0, 1{]} range. This is
-important because the raw values of frequency or rating count can be
-heavily skewed or on different scales. Normalized columns include:
+For popularity score calculation, as the raw values of frequency or
+rating counts can be heavily skewed or on different scales. We applied
+\textbf{MinMaxScaler} to rescale them to the {[}0, 1{]} range to ensure
+that the three indicators (rating counts, rating scores, frequency) are
+comparable and balanced.
+
+Normalized columns include:
 
 \begin{itemize}
 \tightlist
 \item
-  \texttt{freq\_scaled}
+  \texttt{freq\_scaled}: normalized frequency of the dish
 \item
-  \texttt{rating\_scaled}
+  \texttt{rating\_scaled}: normalized count of user ratings
 \item
-  \texttt{score\_scaled}
+  \texttt{score\_scaled}: normalized average user rating
 \end{itemize}
 
 This step creates a uniform basis for computing the final popularity
@@ -675,16 +692,18 @@ Al-Rubaye and Sukthankar (2020))
 \begin{itemize}
 \tightlist
 \item
-  \textbf{60\% rating count:} Measures how many people have reviewed; we
-  viewed it as the strongest proxy of broad customer engagement
+  \textbf{60\% rating count: (\texttt{rating\_scaled})} Measures how
+  many people have reviewed; we viewed it as the strongest proxy of
+  broad customer engagement.
 \item
-  \textbf{20\% average score:} captures perceived quality but is often
-  biased by low volume
+  \textbf{20\% average score: (\texttt{score\_scaled})} captures
+  perceived quality but is often biased by low volume.
 \item
-  \textbf{20\% frequency}:** reflects widespread presence on menus but
-  doesn't always indicate desirability All computed scores are stored in
-  a SQL table: \texttt{cleaned\_menu\_with\_popularity} This becomes the
-  \textbf{knowledge base} table used for filtering and recommendations.
+  \textbf{20\% frequency: (\texttt{freq\_scaled})} reflects widespread
+  presence on menus but doesn't always indicate desirability.\\
+  All computed scores are stored in a SQL table:
+  \texttt{cleaned\_menu\_with\_popularity} This becomes the knowledge
+  base table used for filtering and recommendations.
 \end{itemize}
 
 \subsection{Group and Rank Dishes (Filtering \& Output
@@ -706,7 +725,7 @@ At recommendation time, the system:
   \item
     Exact matches on restaurant\_type\_std
   \item
-    Filters out duplicate dishes (e.g., same base/flavor combo for the
+    Filters out duplicate dishes (e.g.~same base/flavor combo for the
     same type)
   \end{itemize}
 \item
@@ -722,17 +741,17 @@ Finally, the top N dishes (configurable) are returned as output.
 Scope}\label{clarification-on-filtering-scope}
 
 Currently, our system supports \textbf{structured filtering only}
-specifically, by one to three restaurant\_type\_std values (e.g.,
-``pizza restaurant'', ``sandwich shop''). These types are extracted
-during LLM cleaning and matched exactly during the filtering process.
-This was inspired by best practices in popularity-based recommenders,
-which focus on transparency and operational simplicity in early-stage
-deployment Sreekala (2020). At this stage, we do \textbf{not} support:
+specifically, by one to three restaurant\_type\_std values (e.g.~``pizza
+restaurant'', ``sandwich shop''). These types are extracted during LLM
+cleaning and matched exactly during the filtering process. This was
+inspired by best practices in popularity-based recommenders, which focus
+on transparency and operational simplicity in early-stage deployment
+Sreekala (2020). At this stage, we do \textbf{not} support:
 
 \begin{itemize}
 \tightlist
 \item
-  Keyword-based filtering (e.g., searching for ``pepperoni'')
+  Keyword-based filtering (e. searching for ``pepperoni'')
 \item
   Semantic/embedding-based matching (e.g., interpreting ``comfort food''
   or ``something spicy'')
@@ -753,9 +772,9 @@ To demonstrate how the recommendation engine works in practice, we
 include a use case where a partner restaurant is identified as a
 \textbf{``pizza restaurant''}. The system filters all dishes from our
 cleaned Uber Eats knowledge base that match this restaurant type and
-scores each based on its normalized rating, frequency, and rating count.
-The weighted score is then used to rank the items, returning the top 10
-most relevant dishes.
+scores each based on its normalized rating score, frequency, and rating
+count. The weighted score is then used to rank the items, returning the
+top 10 most relevant dishes.
 
 As shown in the figure below Figure~\ref{fig-rec-example}, the
 top-ranked items for a pizza restaurant include popular classics such
@@ -873,26 +892,10 @@ Heymate can utilize this tool in two primary ways:
   to make data-driven menu decisions aligned with current market trends.
 \end{itemize}
 
-\subsection{Strengths of the Data
-Product}\label{strengths-of-the-data-product}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  Automated Cleaning \& Standardization: GPT-powered semantic cleaning
-  reduces manual effort in processing noisy menu data.
-\item
-  Scalability: Batch ingestion with Flask routing and SQL Server
-  integration allows seamless future expansion as data volume grows.
-\item
-  Domain-Specific Recommendations: The system leverages aggregated
-  restaurant-type-level patterns, delivering tailored suggestions
-  relevant to each merchant.
-\item
-  Plug-and-Play Interface: Simple inputs (restaurant type) return
-  actionable recommendations without requiring technical knowledge.
-\end{enumerate}
+Overall speaking, to enable a scalable, end-to-end pipeline that
+supports both internal testing and client-facing deployment, we applied
+several key data science techniques. Below, we highlight three methods
+that were critical to addressing real-world data challenges.
 
 \section{Data Science Methods}\label{data-science-methods}
 
@@ -948,7 +951,7 @@ Considered}\label{alternative-methods-considered}
 
 \subsection{Distributed Deployment}\label{distributed-deployment}
 
-Our project involved processing a large dataset---over 3 million rows
+Our project involved processing a large dataset, over 3 million rows
 from the Uber Eats dataset. Cleaning this data sequentially would have
 taken approximately 5,000 hours, which was not feasible within our
 timeline. To solve this, we implemented a distributed deployment
@@ -1046,9 +1049,9 @@ data-driven menu recommendations that encourage customer return visits.
 However, partners often lack clear insights into which menu items
 perform well across the market and why. Our project aimed to close this
 gap by designing a popularity-based recommendation system that scores
-dishes based on the number of ratings, average rating, and frequency
-across menus, offering partners a transparent foundation for data-backed
-decision-making.
+dishes based on the number of ratings, average rating scores, and
+frequency across menus, offering partners a transparent foundation for
+data-backed decision-making.
 
 \subsection{How Does Our Solution Address
 It?}\label{how-does-our-solution-address-it}
@@ -1100,14 +1103,13 @@ menu data into structured insights, several limitations remain:
   bestsellers.
 \item
   \textbf{Hard Filtering:} Restaurant type filtering is an exact match
-  only (e.g., ``pizza restaurant''), limiting support for broader or
-  fuzzy queries like ``comfort food'' or ``date night meals''. A more
-  flexible filtering mechanism could improve the versatility of the
-  tool.
+  only (e. ``pizza restaurant''), limiting support for broader or fuzzy
+  queries like ``comfort food'' or ``date night meals''. A more flexible
+  filtering mechanism could improve the versatility of the tool.
 \item
   \textbf{Evaluation Challenge:} Due to limited deployment and lack of
   real-time feedback from users, our validation process is based on
-  illustrative case studies (e.g., the pizza restaurant example). While
+  illustrative case studies (e.g.~the pizza restaurant example). While
   useful for demonstration, A/B testing or real user feedback would be
   necessary to confirm the real-world effectiveness of the tool.
 \item
@@ -1117,9 +1119,9 @@ menu data into structured insights, several limitations remain:
   real-time or production use cases.
 \item
   \textbf{Lack of Granular Personalization:} While our system
-  standardizes restaurant types (e.g., ``Chinese restaurant''), it does
+  standardizes restaurant types (e.g.~``Chinese restaurant''), it does
   not yet support finer-grained classification at the sub-type level
-  (e.g., ``Szechuan,'' ``Cantonese''). Additionally, the recommender
+  (e.g.~``Szechuan,'' ``Cantonese''). Additionally, the recommender
   ignores important factors such as local popularity, pricing, and
   user-specific preferences. These limitations reduce the system's
   ability to deliver tailored insights for diverse audiences.
@@ -1147,8 +1149,8 @@ recommend:
   Cloud Deployment: Deploy to Azure to support scalability and integrate
   directly with Heymate's CRM system.
 \item
-  Subtype Extraction: Enhance LLM outputs with more detailed tags (e.g.,
-  ``spicy,'' ``gluten-free,'' ``vegan'') for deeper filtering.
+  Subtype Extraction: Enhance LLM outputs with more detailed tags
+  (e.g.~``spicy,'' ``gluten-free,'' ``vegan'') for deeper filtering.
 \item
   Evaluation Framework: Design structured evaluations using click data,
   client interviews, or business KPIs to measure impact.
